src/tests/fixtures/input_types/InputTypeInterfacePromiseField.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
interface MyInputType {
  someMethod: Promise<string>;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_types/InputTypeInterfacePromiseField.invalid.ts:3:15 - error: `Promise` is not a valid as an input type.

3   someMethod: Promise<string>;
                ~~~~~~~~~~~~~~~
